--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,2 @@
-<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
 <my-app>loading</my-app>
